# cartesi-drand

./: .cartesi.env  .dockerignore  .gitignore  .gitpod.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.old  LICENSE.md  README.md  build_middleware.sh  build_middleware_dev.sh  build_middleware_prod.sh  dapp-start.sh  docker-bake.hcl  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  shell.nix
.github/workflows/: drand-provider.yml  node.yml  release.yml  rust.yml  web3-client.yml
convenience-drand-provider/: .env.example  README.md  jest.config.json  jest.config.ts  package-lock.json  package.json  tsconfig.json
convenience-drand-provider/deployments/localhost/: ERC721Portal.json  InputBox.json
convenience-drand-provider/src/: DrandProvider.ts  app.ts  configs.ts
convenience-drand-provider/src/cartesi/: InputSender.ts  abi.ts  adapter.ts  connect.ts  networks.ts  rollups.ts  utils.ts
convenience-drand-provider/test/: DrandProvider.test.ts  Helper.ts
convenience-middleware/: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.middleware  README.md  build_middleware.sh  drand.config.json
convenience-middleware/.cargo/: config.toml
convenience-middleware/src/: drand.rs  errors.rs  logger.rs  main.rs  main_test.rs  man_test.rs  models.rs  rollup.rs  router.rs  routes.rs  utils.rs
convenience-middleware/src/models/: mod.rs
dapp-blackjack/: .env.development  .env.production  .gitignore  .prettierrc  README.md  d.ts  package-lock.json  package.json  tsconfig.json
dapp-blackjack/src/: App.css  App.tsx  index.html  index.tsx
dapp-blackjack/src/cartesi/: Cartesi.ts
dapp-blackjack/src/components/: ConnectWallet.tsx  Dapp.tsx  GamePlay.tsx  Loading.tsx  NetworkErrorMessage.tsx  NoTokensMessage.tsx  NoWalletDetected.tsx  TransactionErrorMessage.tsx  Transfer.tsx  WaitingForTransactionMessage.tsx
dapp-blackjack/src/components/cards/: Card.tsx  Card10.tsx  Card2.tsx  Card3.tsx  Card4.tsx  Card5.tsx  Card6.tsx  Card7.tsx  Card8.tsx  Card9.tsx  CardA.tsx  CardBack.tsx  CardJ.tsx  (+5 more)
dapp-blackjack/src/deployments/: ERC20Portal.json  ERC721Portal.json  InputBox.json  dapp.json
dapp-blackjack/src/models/: PlayerHand.ts  Scoreboard.ts
dapp-contract-blackjack/: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile dapp  README.md  dapp-start.sh  drand.config.json
dapp-contract-blackjack/src/: lop.rs  main.rs  main_test.rs  mod.rs  rollups.rs  util.rs
dapp-contract-blackjack/src/models/: card.rs  game.rs  mod.rs  player.rs  repository.rs
dapp-contract-blackjack/tests/: game_test.rs  helper.rs  main_test.rs
dapp-contract-blackjack/tests/common/: mod.rs
dapp-contract-sunodo/: .env  Cargo.toml  dapp-start.sh
dapp-contract-sunodo/src/: util.rs
dapp-contract-sunodo/src/models/: card.rs  game.rs  mod.rs
dapp-contract-sunodo/tests/: game_test.rs  main_test.rs
dapp-contract-sunodo/tests/common/: mod.rs
deployments/: package-lock.json  package.json
deployments/localhost/: Authority.json  Bitmask.json  BitsManipulation.json  BitsManipulationLibrary.json  CartesiDAppFactory.json  CartesiMathV2.json  DAppAddressRelay.json  ERC20Portal.json  ERC721Portal.json  EtherPortal.json  History.json  InputBox.json  Merkle.json  MerkleV2.json  UnrolledCordic.json  WorkerAuthManagerImpl.json  WorkerManagerAuthManagerImpl.json  WorkerManagerImpl.json
drand-logger/: Cargo.toml
drand-logger/src/: lib.rs
web3-client/: DEV2DEV.md  README.md  package-lock.json  package.json  tsconfig.json
web3-client/src/: hex.ts  main.ts  utils.ts
web3-client/src/cartesify/: AxiosLikeClient.ts  AxiosWrappedPromise.ts  Cartesify.ts  FetchLikeClient.ts  InputAddedListener.ts
web3-client/tests/: main.test.ts  test.old.ts
web3-client/tests/cartesify/: AxiosLikeClient.test.ts  FetchClient.test.ts
