[package]
name = "cartesi-drand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
json = "0.12"
dotenv = "0.15.0"
hex = "0.4.3"
blstrs = "0.7.0"
serde = { version = "1.0.171", features = ["derive"] }
