[package]
name = "cartesi-drand"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
hyper = { version = "0.14", features = [
    "http1",
    "runtime",
    "client",
    "backports",
    "deprecated",
] }
tokio = { version = "1.18", features = ["macros", "rt-multi-thread", "fs"] }
dotenv = "0.15.0"
hex = { version = "0.4.3", features = ["serde"] }
drand-verify = { version = "0.6.1", features = ["hex"] }
serde = { version = "1.0.171", features = ["derive"] }
hex-literal = "0.4.1"
serde_json = "1.0.102"
sha3 = "0.10.8"
log = { version = "0.4.20", features = ["std", "serde"] }
env_logger = "0.10.1"
derive_more = { version = "0.99.17", no-default-features = true, features = [
    "error",
    "display",
] }
ethnum = { version = "1.5.0", no-default-features = true, features = ["serde"] }

[dev-dependencies]
httptest = "0.15.4"
