[package]
name = "dapp-contract-blackjack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
json = "0.12.4"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
tokio = { version = "1.29.1", features = ["full"] }
