[package]
name = "dapp-contract-blackjack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0.102"
httptest = "0.15.4"
serde = { version = "1.0.171", features = ["derive"] }
bs58 = "0.5.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
hex = { version = "0.4.3", features = ["serde"] }
axum = "0.6.20"
